# review_gen

./: .gitignore  README.md  combine_reviews.sh  pyproject.toml
generate/: generate.py
scrape_reviews/: find_restaurants.py  scraper.py
train/: __init__.py  dataset.py  pre_tokenisation.py  review_gen.py  train.py  train_tokenizer.py
