[project]
name = ""
version = "0.1.0"
description = "A fast scraping project"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "httpx",
    "beautifulsoup4",
    "selectolax",
    "lxml",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
