[project]
name = "review_gen"
version = "0.1.0"
description = "transformers fun"
authors = [{ name = "Jan", email = "janciechowski@gmail.com" }]
dependencies = [
    "httpx",
    "beautifulsoup4",
    "selectolax",
    "lxml",
    "selenium",
    "tokenizers",
    "torch",
    "tqdm",
    "black",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
